# MasterHttpRelayVPN-AndroidClient

./: ANDROID_MIGRATION.md  GITHUB_RELEASE.md  IMPLEMENTATION_SUMMARY.md  MIGRATION_COMPLETE.md  QUICK_START.md  README.md  README_PUBLISHING_FA.md  setup.py  verify_migration.sh
.github/workflows/: android-ci.yml  release-manual.yml
android/: .gitignore  PYTHON_INTEGRATION.md  README.md  build.gradle.kts  build_rust_mobile.sh  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro  requirements.txt
android/app/scripts/: build_rust.sh  build_rust_bridge.sh  build_tun2socks.sh
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/masterhttprelay/vpn/: App.kt  MainActivity.kt
android/app/src/main/java/com/masterhttprelay/vpn/bridge/: PythonBridge.kt  RustBridge.kt  RustBridgeCallback.kt  VpnCoreCallback.kt
android/app/src/main/java/com/masterhttprelay/vpn/data/: ConfigStore.kt  RustConfig.kt
android/app/src/main/java/com/masterhttprelay/vpn/di/: AppModule.kt
android/app/src/main/java/com/masterhttprelay/vpn/service/: BootReceiver.kt  MasterDnsVpnService.kt  RustVpnService.kt  (+3 more)
android/app/src/main/python/: main.py  vpn_core.py
android/app/src/main/python/src/: cert_installer.py  domain_fronter.py  h2_transport.py  proxy_server.py
android/app/src/main/res/drawable/: ic_launcher.xml  ic_vpn.xml
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/mobilebridge/: go.mod  mobilebridge.go
android/rust-jni-bridge/: Cargo.toml
android/rust-jni-bridge/src/: lib.rs
assets/openwrt/: mhrv-rs.init
(+35 files in other folders)
