[package]
name = "rust-jni-bridge"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_jni_bridge"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21"
once_cell = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "sync"] }
tracing = "0.1"

mhrv_rs = { path = "../..", package = "mhrv-rs" }
